# relayos-mcp

./: LICENSE  README.md  claude_prompt.md  pyproject.toml
example/: basic_workflow.py
relayos_mcp/: __init__.py  cli.py  executor.py  mcp_server.py  schema.py  server.py  task_parser.py
relayos_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
