[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relayos-mcp"
version = "0.1.0a1"
description = "MCP server — Claude Code calls AI agents (mimo, opencode) as tools"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "jjjjjjjjnnjnn"}]
keywords = ["mcp", "claude-code", "ai-agents"]

dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.scripts]
relayos-mcp = "relayos_mcp.server:main"
relay-task = "relayos_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["relayos_mcp*"]
